# musicbrainz-explorer

./: .gitignore  README.md  musicbrainz.db  pyproject.toml
config/: database.py
src/musicbrainz_explorer/: __init__.py
src/musicbrainz_explorer/api/: client.py
src/musicbrainz_explorer/cli/: __init__.py  commands.py
src/musicbrainz_explorer/config/: database.py
src/musicbrainz_explorer/database/: manager.py  repositories.py
src/musicbrainz_explorer/models/: database.py  domain.py
src/musicbrainz_explorer/services/: artist_service.py
tests/: test_basic.py  test_database.py  test_integration.py
