[project]
name = "musicbrainz-explorer"
version = "0.1.0"
description = "A Python toolkit for music and artist data analysis"
authors = [
    {name = "Your Name", email = "2.max.leo.watson@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "sqlalchemy>=2.0.0", 
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0"
]

[project.scripts]
mbz = "musicbrainz_explorer.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
